<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="number1">Enter number 1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="number2">Enter number 2</string>
    <string name="equally">=</string>
    <string name="result">Result</string>
</resources>