<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <EditText
        android:id="@+id/edit_text_number1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen23dp"
        android:background="@drawable/shape_for_edit_text"
        android:hint="@string/number1"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/dimen65dp"
        android:layout_height="@dimen/dimen65dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        android:background="@drawable/shape_for_bottom"
        android:text="@string/plus"
        android:textSize="@dimen/dimen35sp"
        android:textColor="@color/blackNew"
        android:layout_marginTop="@dimen/dimen22dp"
        android:layout_marginStart="@dimen/dimen17dp" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/dimen65dp"
        android:layout_height="@dimen/dimen65dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number1"
        app:layout_constraintStart_toEndOf="@id/button_plus"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        android:background="@drawable/shape_for_bottom"
        android:text="@string/minus"
        android:textSize="@dimen/dimen35sp"
        android:textColor="@color/blackNew"
        android:layout_marginTop="@dimen/dimen22dp"
        android:layout_marginStart="@dimen/dimen22dp"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/dimen65dp"
        android:layout_height="@dimen/dimen65dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number1"
        app:layout_constraintStart_toEndOf="@id/button_minus"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        android:background="@drawable/shape_for_bottom"
        android:text="@string/multiply"
        android:textSize="@dimen/dimen35sp"
        android:textColor="@color/blackNew"
        android:layout_marginTop="@dimen/dimen22dp"
        android:layout_marginStart="@dimen/dimen22dp"/>

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/dimen65dp"
        android:layout_height="@dimen/dimen65dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number1"
        app:layout_constraintStart_toEndOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_for_bottom"
        android:text="@string/division"
        android:textSize="@dimen/dimen35sp"
        android:textColor="@color/blackNew"
        android:layout_marginTop="@dimen/dimen22dp"
        android:layout_marginStart="@dimen/dimen22dp"
        android:layout_marginEnd="@dimen/dimen17dp"/>

    <EditText
        android:id="@+id/edit_text_number2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen70dp"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintStart_toSrartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen22dp"
        android:background="@drawable/shape_for_edit_text"
        android:hint="@string/number2"/>

    <Button
        android:id="@+id/button_equally"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen55dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_for_bottom_equally"
        android:text="@string/equally"
        android:textSize="@dimen/dimen25sp"
        android:textColor="@color/blackNew"
        android:layout_marginTop="@dimen/dimen18dp" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="@dimen/dimen30sp"
        android:textColor="@color/blackNew"
        app:layout_constraintTop_toBottomOf="@+id/button_equally"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen5dp"
        android:layout_marginEnd="@dimen/dimen22dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>